[project]
name = "deep-gemm"
dynamic = ["version"]
description = "DeepSeek GEMM Kernels"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools-scm]
write_to = "deep_gemm/_version.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["deep_gemm*"]

[tool.setuptools.package-data]
deep_gemm = ["include/**/*"]

[tool.ruff]
line-length = 88

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["tests", "deep_gemm"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "I",    # isort
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "PT",   # flake8-pytest
    "PIE",  # flake8-pie
    "EXE",  # flake8-executable
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "ANN",  # flake8-annotations
    "BLE",  # flake8-blind-except
    "LOG",  # flake8-logging
    "G",    # flake8-logging-format
    "TCH",  # flake8-type-checking
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "T20",  # flake8-print
    "ICN",  # flake8-import-conventions
    "TID",  # flake8-tidy-imports
    "INP",  # flake8-no-pep420
    "NPY",  # numpy
    "FURB", # refurb
    "TRY",  # tryceratops
    "FLY",  # flynt,
]
ignore = [
    "E501",   # Line too long
    "ANN401", # Allow Any
    "TRY003", # Allow long messages
    "SIM117", # Allow nested with
]